syntax = "proto3";
option java_multiple_files = true;

import "google/api/annotations.proto";

package com.github.noelyap.setterforcatan.board;

option java_package = "com.github.noelyap.setterforcatan.board.protogen";

import "board.proto";
import "grader_strategy.proto";
import "schema.proto";
import "specification.proto";

message GenerateBoardRequest {
  oneof arg {
    Schema schema = 1;
    Specification specification = 2;
  }

  repeated GraderStrategy graders = 3;
}

message GenerateBoardResponse {
  oneof result {
    Board board = 1;
    string error_message = 2;
  }
}

service BoardService {
  rpc generateBoard(GenerateBoardRequest) returns (GenerateBoardResponse);
}
